[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/BalanceSheet.gd" type="Script" id=1]
[ext_resource path="res://scenes/InfoFont.tres" type="DynamicFont" id=2]

[node name="BalanceSheet" type="Node2D"]
script = ExtResource( 1 )

[node name="CashDisplay" type="Label" parent="."]
margin_right = 890.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 2 )
text = "$126,200,000,000"
align = 2

[node name="Label" type="Label" parent="CashDisplay"]
margin_left = 6.84943
margin_top = -1.05452
margin_right = 366.849
margin_bottom = 62.9455
custom_fonts/font = ExtResource( 2 )
text = "Cash:"

[node name="CostDisplay" type="Label" parent="."]
margin_top = 53.5125
margin_right = 890.0
margin_bottom = 117.512
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.721569, 0.137255, 0.0627451, 1 )
text = "-$0,000,000,000"
align = 2

[node name="Label" type="Label" parent="CostDisplay"]
margin_left = 6.84943
margin_top = -5.28308
margin_right = 366.849
margin_bottom = 58.7169
custom_fonts/font = ExtResource( 2 )
text = "Launch cost:"

[node name="RevenueDisplay" type="Label" parent="."]
margin_top = 106.505
margin_right = 890.0
margin_bottom = 170.505
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.737255, 0.866667, 0.32549, 1 )
text = "+$0,000,000,000"
align = 2

[node name="Label" type="Label" parent="RevenueDisplay"]
margin_left = 6.84943
margin_top = -8.21637
margin_right = 366.849
margin_bottom = 55.7836
custom_fonts/font = ExtResource( 2 )
text = "Revenue:"
